[project]
name = "ecommerce-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.8",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "python-dotenv>=1.2.2",
]
